# ShiftPlanner

./: .env.example  .gitignore  README.md  blog.md  main.py  pyproject.toml  requirements.txt  walkthrough.md
shift_planner/: agent.py  sheets_helper.py  solver.py
