[project]
name = "shift-planner"
version = "0.1.0"
description = "A Google ADK-powered shift planner with Google Sheets integration"
dependencies = [
    "google-adk[gcp]>=2.2.0",
    "gspread>=6.0.0",
    "google-auth-oauthlib>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11,<3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
